Updated to read from config and use enabling of source.

--- a/extension/newtab.html
+++ b/extension/newtab.html
@@ -125,6 +125,7 @@
         <p id="loadingText">Loading today's picture...</p>
     </div>
     
+    <script src="config.js"></script>
     <script src="newtab.js"></script>
 </body>
 </html>
