update extension and deployment.

--- a/extension/newtab.html
+++ b/extension/newtab.html
@@ -10,13 +10,7 @@
     
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-DDQ4BNX83M"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'G-DDQ4BNX83M');
-    </script>
+    <script src="gtag-init.js"></script>
 </head>
 <body>
     <div class="background-container" id="backgroundContainer">
