updated TODO with link to stores.

--- a/extension/newtab.html
+++ b/extension/newtab.html
@@ -74,11 +74,19 @@
                     </label>
                 </div>
                 
-                <!-- Source Link -->
+                <!-- Extension Store Links -->
+                <div class="settings-divider"></div>
                 <div class="settings-item">
-                    <a id="sourceLink" href="#" target="_blank" class="settings-link">
-                        <span>Visit Source</span>
-                    </a>
+                    <label class="settings-label">
+                        <span>Get Extension</span>
+                    </label>
+                    <div class="store-links">
+                        <a href="https://chromewebstore.google.com/detail/picture-of-the-day/conkiboijidpjkmflbmagmcebddpphli" target="_blank" class="store-link">Chrome</a>
+                        <a href="https://chromewebstore.google.com/detail/picture-of-the-day/conkiboijidpjkmflbmagmcebddpphli" target="_blank" class="store-link">Brave</a>
+                        <a href="https://addons.mozilla.org/en-US/firefox/addon/picture-of-the-day/" target="_blank" class="store-link">Firefox</a>
+                        <a href="https://chromewebstore.google.com/detail/picture-of-the-day/conkiboijidpjkmflbmagmcebddpphli" target="_blank" class="store-link">Edge</a>
+                        <a href="https://github.com/orsenthil/picture" target="_blank" class="store-link">GitHub</a>
+                    </div>
                 </div>
             </div>
         </div>
